# HyperBEAM

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  config.flat  deploy.sh  docker-compose.yaml  entrypoint.sh  erlang_ls.config  index.html  mkdocs.yml  rebar.config  remove_summaries.sh  request.mjs
.github/documentation/: tests.md  workflows.md
.github/workflows/: auto-test-from-image-hb.yml  auto-test-hb.yml  build-deploy-docs.yml  build.yml  ci.yml  (+2 more)
c_src/: hb_beamr.c  tpm_nif.c  tpm_utils.c  tpm_utils.h
config/: vm.args.src
doc/: .build  404.html  ao-core-protocol.html  ao-http-api.html  api-reference.html  ar_bundles.html  ar_deep_hash.html  ar_rate_limiter.html  ar_timestamp.html  ar_tx.html  ar_wallet.html  dev_cache.html  dev_cacheviz.html  dev_codec_ans104.html  dev_codec_flat.html  dev_codec_httpsig.html  dev_codec_httpsig_conv.html  dev_codec_json.html  dev_codec_structured.html  dev_cron.html  dev_cu.html  dev_dedup.html  dev_delegated_compute.html  dev_faff.html  dev_genesis_wasm.html  dev_green_zone.html  dev_hyperbuddy.html  dev_json_iface.html  dev_lookup.html  dev_lua.html  dev_message.html  dev_meta.html  dev_monitor.html  dev_multipass.html  dev_p4.html  dev_patch.html  dev_poda.html  dev_process.html  dev_process_cache.html  dev_process_worker.html  (+67 more)
docs/: README.md  index copy.html  llms-full.txt  llms.txt
edoc/: stylesheet.css
native/hb_beamr/lib/: CMakeLists.txt  Makefile  stub.c
native/hb_beamr/lib/include/: hb_beamr_capi_lib.h  hb_beamr_fsm.h  hb_beamr_lib.h  hb_beamr_utils.h
native/hb_beamr/lib/src/: hb_beamr_capi_lib.c  hb_beamr_capi_lib.cpp  hb_beamr_fsm.c  hb_beamr_lib.c  hb_beamr_utils.c
native/hb_beamr/lib/test/: CMakeLists.txt  async_import_stress_test.c  async_import_test.c  async_import_threads_test.c  async_queue.c  async_queue.h  asynchronous_comms_fsm_test.c  asynchronous_comms_test.c  capi_context_management_test.c  capi_import_call_export_test.c  capi_import_call_test.c  capi_instantiate_call_test.c  capi_load_aot_module_test.c  capi_load_wasm_module_test.c  capi_memory_access_test.c  capi_runtime_init_test.c  context_management_test.c  fsm_nested_import_test.c  fsm_test.c  generate_natives_test.c  import_call_test.c  indirect_call_test.c  instantiate_call_test.c  load_aot_module_test.c  long_jmp_test.c  minimal_emscripten_nested_indirect_test.c  minimal_indirect_call_test.c  multithread_stress_fsm_test.c  multithread_stress_test.c  runtime_init_test.c  try_catch_test.c  utils.c  utils.h  wamr_import_call_export_test.c  wamr_memory_access_test.c
native/hb_beamr/lib/test/fixtures/: .clangd  basic_fib.cpp  import_nested.c  import_nested_wat.wat  import_test_module.c  indirect_call_test_module.c  jmp.cpp  memory_test_module.c  minimal_host_call.cpp  simple_indirect.wat  simple_memory.wat  try_catch.cpp
native/hb_beamr/wasm/: CMakeLists.txt  Makefile
native/hb_beamr/wasm/cmake/: WAMRConfig.cmake.in  wamr.cmake
native/hb_beamr/wasm/include/: wasm.h
native/hb_beamr/wasm/src/: wasm.c
native/hb_wtime/: Cargo.toml
native/hb_wtime/src/: convert.rs  example.rs  lib.rs  logging.rs  nif.rs  types.rs  wasm.rs  wasm_fsm.rs
native/hb_wtime/src/ext/: emscripten.rs  mod.rs  types.rs
native/kernel_em_nif/: Cargo.toml  README.md
native/kernel_em_nif/src/: lib.rs
native/kernel_em_nif/src/core/: adapter.rs  arweave.rs  constants.rs  execution_machine.rs  mod.rs
native/kernel_em_nif/src/kernels/: double-integer.wgsl  glitch-berlin.wgsl  pixelize.wgsl
native/kernel_em_nif/src/tests/: adapter.rs  double.rs  mod.rs
native/kernel_em_nif/src/utils/: load0.rs  mod.rs
native/load_revm_nif/: Cargo.toml  README.md  state.json  state_9496.json
native/load_revm_nif/appchains/: 8009.json  9496.json
native/load_revm_nif/genesis_configs/: 8009.json  9496.json
native/load_revm_nif/src/: evm.rs  handler.rs  lib.rs  tests.rs  tx_utils.rs
native/load_revm_nif/src/core/: evm.rs  handler.rs  interpreter.rs  mod.rs  state.rs  transaction.rs
native/load_revm_nif/src/tests/: basic.rs  mod.rs  uniswap.rs  uniswap_v2.rs  zama_fhevm.rs
native/load_revm_nif/src/utils/: constants.rs  misc.rs  mod.rs
native/riscv_em_nif/: Cargo.toml
native/riscv_em_nif/appchains/: 1.json
native/riscv_em_nif/genesis_configs/: 7777.json
native/riscv_em_nif/src/: lib.rs  main.rs
native/riscv_em_nif/src/core/: mod.rs  riscv_machine.rs  state.rs
native/riscv_em_nif/src/tests/: erc20-bytecode-signed.txt  erc20-mint-signed.txt  erc20.rs
native/riscv_em_nif/src/utils/: config.rs  constants.rs  mod.rs
patch/: wamr-defer-post-instantiate-functions.patch
scripts/: cron.lua  dynamic-router.lua  hb_wtime-log-perf.py  hello.lua  hyper-token-p4-client.lua  hyper-token.lua  livenet-it1.lua  lua-cache-test.lua  string-gmatch-test.lua  token_test.lua
src/: README.md  ao_app.erl  ao_cache.erl  ao_client.erl  ao_rocksdb_store.erl  ao_store.erl  ar_bundles.erl  ar_rate_limiter.erl  ar_timestamp.erl  ar_tx.erl  ar_wallet.erl  cu_process.erl  cu_test.erl  dev_cache.erl  dev_cacheviz.erl  dev_calculator.erl  dev_calculator_nif.erl  dev_codec_ans104.erl  dev_codec_flat.erl  dev_codec_httpsig.erl  dev_codec_httpsig_conv.erl  dev_codec_httpsig_siginfo.erl  dev_codec_json.erl  dev_codec_structured.erl  dev_codec_tx.erl  dev_cron.erl  dev_cu.erl  dev_dedup.erl  dev_delegated_compute.erl  dev_emscripten.erl  dev_evm.erl  dev_faff.erl  dev_genesis_wasm.erl  dev_green_zone.erl  dev_hook.erl  dev_hyperbuddy.erl  dev_json_iface.erl  dev_kem.erl  dev_ledger_process.erl  dev_lookup.erl  (+89 more)
systemd/: hyperbeam.service
test/: aos-dock.wasm  aos_new.wasm  config.flat  evm-device.lua  fib-64.wasm  fib.cpp  fib.wasm  format.c  format.wasm  hyper-aos.lua  invalid.wasm  jmp.cpp  jmp.wasm  kem-device.lua  ledger.lua  parse.c  parse.wasm  pow_calculator.aot  test-calling.aot  test-print.aot  test.aot  test.lua  try-64.wasm  try.cpp  try.wasm  try_stack.cpp  try_stack.wasm  webgpu-compute-emscripten.c  webgpu-compute-emscripten.wasm  webgpu-triangle-bmp-xs.wasm
viksit/: beam.js  notes.md  sign_request.mjs  t2.mjs  test.lua  test.mjs
(+168 files in other folders)
