[package]
name = "hb_wtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "hb_wtime"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
anyhow = "1.0.98"
rustler = "0.36.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tracing-test = "0.2.5"
ulid = "1.2.1"
wasmtime = "32.0.0"
