[package]
name = "load_revm_nif"
version = "0.1.0"
authors = ["Load Network Team"]
edition = "2021"

[lib]
name = "load_revm_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
revm = {git = "https://github.com/bluealloy/revm", branch = "main", features=["optional_block_gas_limit"]}
serde_json = "1.0.140"
hex = "0.4.3"
serde = {version = "1.0.219", features = ["derive"]}
rlp = "0.5.2"
secp256k1 = { version = "0.27.0", features = ["recovery"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ethers-core = "2.0.10"
ethers = "2.0.14"
